@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-07T02:05:30Z",
-  "count_outdated" : 2471,
-  "uniques_outdated" : 625,
-  "count" : 2500,
+  "timestamp" : "2022-10-07T16:33:52Z",
+  "count_outdated" : 2473,
+  "uniques_outdated" : 626,
+  "count" : 2501,
   "uniques" : 643,
   "clones" : [
-    {
-      "timestamp": "2022-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-24T00:00:00Z",
       "count": 2,
