@@ -1,3 +1,11 @@
+2022-10-07T16:33:52Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3206267731
+* notice: last 14d: unq all: 8 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 625 2471 / 643 2500
+* notice: next accum: outdated-unq outdated-all / unq all: 626 2473 / 643 2501
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-07T02:05:30Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3201746901
 * notice: last 14d: unq all: 8 29
